feat: Refactor EC2 deployment for consistent paths and simplified setup
This commit refactors the EC2 deployment workflows (`backend-cd.yaml`, `frontend-cd.yaml`, `ec2-setup.yaml`) to standardize the deployment directory and streamline the setup process.

Previously, `docker-compose.yaml` and related files were copied directly into `/home/<EC2_USERNAME>/app`, and the CD workflows navigated there to execute Docker commands. This led to inconsistencies and made it harder to manage different deployment environments within the `app` directory.

Changes in this commit:
- `ec2-setup.yaml`:
  - Now copies the entire `deployment/prod` directory (including `docker-compose.yaml` and `.env` files) into `/home/<EC2_USERNAME>/app/deployment/prod`.
  - Simplifies the setup process by removing explicit `mkdir -p` and `docker compose down` commands in the setup workflow, as these will now be handled within the specific deployment directory during CD.
  - The `strip_components` for `scp-action` was removed to ensure the full directory structure is preserved.
  - The script to run the application now navigates to `/home/<EC2_USERNAME>/app/deployment/prod` before executing `docker compose` commands.
- `backend-cd.yaml` and `frontend-cd.yaml`:
  - Updated the `cd` command within the SSH action to navigate to `/home/${{ secrets.EC2_USERNAME }}/app/deployment/prod` before running Docker commands. This ensures that the workflows operate within the correct, structured deployment environment.

This change provides a more organized and maintainable deployment structure on the EC2 instance, making it easier to manage future environment-specific configurations.

--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -68,7 +68,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.EC2_USERNAME }}/app
+            cd /home/${{ secrets.EC2_USERNAME }}/app/deployment/prod
             echo "Logging in to Docker Hub..."
             docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
