--- a/.github/workflows/ec2-setup.yaml
+++ b/.github/workflows/ec2-setup.yaml
@@ -1,84 +1,43 @@
 name: EC2 Setup (Copy Compose Files)
 
 on:
-  # Allows you to trigger the workflow manually from the GitHub UI
   workflow_dispatch:
 
 jobs:
   copy-deployment-files:
-    name: Deploy Docker Compose to EC2
+    name: Copy docker-compose to EC2
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📦 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- STEP 1: Setup and Pre-Cleanup on EC2 ---
-      - name: 🛠️ Ensure Remote Directory Exists and Clean Up Old Containers
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            TARGET_DIR="/home/${{ secrets.EC2_USERNAME }}/app"
-            
-            # Create the target directory if it doesn't exist
-            echo "Creating target directory: $TARGET_DIR"
-            mkdir -p $TARGET_DIR
-            
-            # Change directory to run docker compose commands
-            cd $TARGET_DIR || exit 0
-
-            # Stop and remove any previous running deployment containers
-            echo "Stopping and removing previous containers..."
-            docker compose down || true 
-            
-            # Clean up any leftover nested folders from previous failed runs (like 'deployment/prod')
-            rm -rf $TARGET_DIR/deployment || true 
-
-      # --- STEP 2: Copy Files with Correct Nesting ---
-      - name: 📁 Copy 'deployment/prod' Contents to '/app/'
+      - name: Copy deployment folder to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          # Source is the directory itself. This ensures all contents are copied.
-          source: "deployment/prod" 
-          # Target is the final destination directory.
-          target: "/home/${{ secrets.EC2_USERNAME }}/app/"
-          # This is the key fix: It tells the action to copy the contents of 'prod' 
-          # but strip the leading 'deployment/prod' path, placing files directly in 'app/'.
-          strip_components: 1 
+          source: "deployment/prod/*"
+          target: "/home/${{ secrets.EC2_USERNAME }}/app"
 
-      # --- STEP 3: Run Application ---
-      - name: 🚀 Run Entire Application on EC2
+      - name: Run Entire Application
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            TARGET_DIR="/home/${{ secrets.EC2_USERNAME }}/app"
-            
-            # Navigate to the deployment directory where docker-compose.yaml now resides
-            cd $TARGET_DIR
-            
-            # Login to Docker Hub
-            echo "Logging into Docker Hub..."
+            cd /home/${{ secrets.EC2_USERNAME }}/app/deployment/prod
+
+            # Login to Docker Hub if needed
             docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
             # Pull all images defined in docker-compose.yml
-            echo "Pulling latest images..."
             docker compose pull
 
-            # Start or recreate all services using the new images
-            echo "Starting containers..."
-            docker compose up -d --remove-orphans
+            # Start or recreate all services
+            docker compose up -d
 
-            # Clean up unused images
-            echo "Cleaning up unused images..."
+            # Clean only unused images
             docker image prune -f
-            
-            echo "Deployment complete."
