refactor(workflow): Simplify EC2 setup workflow
This commit refactors the `ec2-setup.yaml` workflow by removing redundant comments and simplifying the `Copy docker-compose.yaml` step.

The workflow now uses `strip_components: 2` in the `scp-action` to flatten the source path, making the copy operation more robust and concise. This change improves the readability and maintainability of the workflow.

--- a/.github/workflows/ec2-setup.yaml
+++ b/.github/workflows/ec2-setup.yaml
@@ -10,7 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # STEP 1 — Ensure /app directory exists
       - name: Create /app directory on EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -19,11 +18,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             mkdir -p /home/${{ secrets.EC2_USERNAME }}/app
-            echo "Directory /app is ready"
 
-      # STEP 2 — Copy ONLY docker-compose.yaml from repo
-      # NO folders, NO prod/, NO deployment/, no nested copying
-      - name: Copy docker-compose.yaml to EC2
+      - name: Copy ONLY docker-compose.yaml (flattened)
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -31,8 +27,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "deployment/prod/docker-compose.yaml"
           target: "/home/${{ secrets.EC2_USERNAME }}/app/"
+          strip_components: 2
 
-      # STEP 3 — Start whole application (first-time run)
       - name: Start Application
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -43,7 +39,6 @@ jobs:
             cd /home/${{ secrets.EC2_USERNAME }}/app
 
             docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
             docker compose pull
             docker compose up -d
             docker image prune -f
