--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -2,7 +2,6 @@ name: Backend CD
 
 on:
   workflow_dispatch:
-  
   push:
     branches:
       - main
@@ -20,66 +19,59 @@ permissions:
   packages: write
 
 jobs:
+
   Build-and-Push:
-    name: Build and Push Frontend Image
+    name: Build and Push Backend Image
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      # Build the production Docker image
       - name: Build Docker Image
-        run: |
-          docker build \
-          -t backend:prod-build \
-          ./backend
+        run: docker build -t backend:prod-build ./backend
 
-      # Login to Docker Hub using secrets
       - name: Dockerhub Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      # Tag the image for Docker Hub
-      - name: Tag Docker Image
+      - name: Tag Image
         run: |
           docker tag backend:prod-build \
           ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:backend-${{ secrets.IMAGE_TAG_VERSION }}
 
-      # Push the tagged image to Docker Hub
-      - name: Push Docker Image
+      - name: Push Image
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:backend-${{ secrets.IMAGE_TAG_VERSION }}
 
   Deploy-on-EC2:
-    name: Deploy on EC2
+    name: Deploy Backend (Blue-Green)
     runs-on: ubuntu-latest
     needs: Build-and-Push
+
     steps:
-      - name: SSH inro EC2 and Deploy
+      - name: SSH into EC2 and Deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.EC2_USERNAME }}/app
-            echo "Logging in to Docker Hub..."
+            IMAGE="${{ secrets.DOCKER_HUB_USERNAME }}/ecom:backend-${{ secrets.IMAGE_TAG_VERSION }}"
+
+            echo "Logging into Docker Hub"
             docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-            echo "Pulling latest backend image..."
-            docker compose pull backend
+            echo "Deploying GREEN"
+            ~/deploy/deploy_green.sh "$IMAGE"
 
-            echo "Recreating frontend container..."
-            docker compose up -d backend
+            echo "Switching traffic to GREEN"
+            ~/deploy/switch_to_green.sh
 
-            echo "Removing old unused images..."
-            docker image prune -f
+            echo "Finalizing BLUE -> GREEN promotion"
+            ~/deploy/finalize_blue_cleanup.sh
 
-            echo "Backend deployment completed!"
-  
+            echo "Backend Blue-Green Deployment Completed Successfully!"
