feat: Implement initial Blue-Green deployment strategy
This commit introduces the foundational scripts and workflow changes required for a Blue-Green deployment strategy for the backend.

The changes include:
- **Added `deploy_green.sh`**: A script to deploy a new "green" instance of the backend service, including health checks.
- **Added `switch_to_green.sh`**: A script to update Nginx configuration to direct traffic to the "green" instance.
- **Added `blue_cleanup.sh`**: A placeholder script for cleaning up the old "blue" instance after a successful switch (currently empty).
- **Updated `backend-cd.yaml`**: Modified the CI/CD pipeline to incorporate the new Blue-Green deployment steps, including deploying green, switching traffic, and finalizing cleanup.
- **Updated frontend text**: Minor text changes on the frontend homepage and its test to reflect "Welcome to Our Ecom Store". This is a small, unrelated change but was part of the same working branch.

These changes lay the groundwork for a more robust and zero-downtime deployment process.

--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -72,6 +72,6 @@ jobs:
             ~/deploy/switch_to_green.sh
 
             echo "Finalizing BLUE -> GREEN promotion"
-            ~/deploy/finalize_blue_cleanup.sh
+            ~/deploy/blue_cleanup.sh
 
             echo "Backend Blue-Green Deployment Completed Successfully!"
